--- a/practice1/CMakeLists.txt
+++ b/practice1/CMakeLists.txt
@@ -12,7 +12,7 @@ find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(SDL2 REQUIRED)
 
-if(TARGET GLEW::GLEW)
+if(APPLE)
 	# brew version of glew doesn't provide GLEW_* variables
 	get_target_property(GLEW_INCLUDE_DIRS GLEW::GLEW INTERFACE_INCLUDE_DIRECTORIES)
 	get_target_property(GLEW_LIBRARIES GLEW::GLEW INTERFACE_LINK_LIBRARIES)
